<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/grupo1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/item_home"
            android:icon="@drawable/nav_home"
            android:title="@string/nav_home"
            android:tooltipText="Inicio"/>

        <item
            android:id="@+id/item_profile"
            android:icon="@drawable/nav_profile"
            android:title="@string/nav_profile"
            android:tooltipText="Perfil de usuario" />


        <item
            android:id="@+id/item_ranking"
            android:icon="@drawable/nav_ranking"
            android:title="@string/nav_ranking"
            android:tooltipText="Estadísticas" />

        <item
            android:id="@+id/item_help"
            android:icon="@drawable/nav_help"
            android:title="@string/nav_help"
            android:tooltipText="Ayuda" />

    </group>

    <group android:id="@+id/grupo2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/item_setting"
            android:icon="@drawable/nav_setting"
            android:title="@string/nav_setting" />

        <item
            android:id="@+id/item_info"
            android:icon="@drawable/nav_info"
            android:title="@string/nav_info" />

        <item
            android:id="@+id/item_exit"
            android:icon="@drawable/nav_exit"
            android:title="@string/nav_exit" />
    </group>

</menu>