<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_home"
        android:title="@string/nav_home"
        android:icon="@drawable/nav_home"
        android:tooltipText="Inicio"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_ranking"
        android:title="@string/nav_ranking"
        android:icon="@drawable/nav_ranking"
        android:tooltipText="Estadísticas"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_profile"
        android:title="@string/nav_profile"
        android:icon="@drawable/nav_profile"
        android:tooltipText="Perfil usuario"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_help"
        android:title="@string/nav_help"
        android:icon="@drawable/nav_help"
        android:tooltipText="Ayuda"
        app:showAsAction="always" />

</menu>