<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_home_admin"
        android:title="@string/nav_home"
        android:icon="@drawable/nav_home"
        android:tooltipText="Inicio"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_category"
        android:title="@string/nav_category"
        android:icon="@drawable/icon_category"
        android:tooltipText="Agregar categoría"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_question"
        android:title="@string/nav_question"
        android:icon="@drawable/icon_question"
        android:tooltipText="Agregar pregunta"
        app:showAsAction="always" />


</menu>