<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layout_margin="8dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_nombre_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/name"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/iv_icono_item"
            app:layout_constraintTop_toTopOf="@+id/iv_icono_item" />

        <TextView
            android:id="@+id/tv_score_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:text="Score: 250"
            app:layout_constraintStart_toStartOf="@+id/tv_nombre_item"
            app:layout_constraintTop_toBottomOf="@+id/tv_nombre_item" />

        <ImageButton
            android:id="@+id/ib_delete"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="16dp"
            android:background="@drawable/icon_delete"
            android:backgroundTint="@color/red"
            android:gravity="center"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_icono_item"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="Imagen usuario"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/imgprofile" />

        <TextView
            android:id="@+id/tv_aciertos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/aciertos"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_fallos"
            app:layout_constraintStart_toStartOf="@+id/tv_fallos"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_fallos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:padding="2dp"
            android:text="@string/errores"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/ib_delete"
            app:layout_constraintStart_toEndOf="@+id/tv_nombre_item"
            app:layout_constraintTop_toBottomOf="@+id/tv_aciertos" />

        <TextView
            android:id="@+id/tv_enblanco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:text="@string/enblanco"
            android:textSize="14sp"
            android:padding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_fallos"
            app:layout_constraintStart_toStartOf="@+id/tv_fallos"
            app:layout_constraintTop_toBottomOf="@+id/tv_fallos" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>